add win scene, replay ability, change graphics

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Lights Out</title>
   </head>
   <body>
+    <div class="win-ui">
+      <h1>You're Are Winner!</h1>
+      <button id="replay-button">Replay</button>
+    </div>
     <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
