adjust canvas size

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="win-ui">
-      <h1>You're Are Winner!</h1>
+      <h1>You Win!</h1>
       <button id="replay-button">Replay</button>
     </div>
     <script type="module" src="./src/main.ts"></script>
